--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "togather-react",
   "version": "0.1.0",
   "description": "togather client app",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,29 @@
   "bugs": {
     "url": "https://github.com/TareekAlofuk/togather-react/issues"
   },
-  "homepage": "https://github.com/TareekAlofuk/togather-react#readme"
+  "homepage": "https://github.com/TareekAlofuk/togather-react#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/react": "^16.8.22",
+    "babel-loader": "^8.0.6",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.12.0",
+    "react-redux": "^7.1.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "reduxpp": "^1.0.1",
+    "redux": "^4.0.1"
+  }
 }
