--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.22",
+    "@types/react-redux": "^7.1.1",
+    "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
@@ -38,7 +40,9 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "reduxpp": "^1.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.1",
+    "reduxpp": "^1.0.1"
   }
 }
