--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/TareekAlofuk/togather-react#readme",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
@@ -27,23 +29,28 @@
     "@types/react-redux": "^7.1.1",
     "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.12.0",
     "react-redux": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.5.2",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "auto-form-react": "^0.2.1",
+    "@types/react-select": "^3.0.0",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-grid-system": "^4.4.6",
+    "react-select": "^3.0.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.1",
-    "reduxpp": "^1.0.1"
+    "reduxpp": "^1.0.1",
+    "validate.js": "^0.13.1"
   }
 }
