--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.22",
     "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
     "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
@@ -46,6 +47,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-grid-system": "^4.4.6",
+    "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
