--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-grid-system": "^4.4.6",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
