--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.1",
     "reduxpp": "^1.0.1",
+    "semantic-ui-react": "^0.87.3",
     "validate.js": "^0.13.1"
   }
 }
