--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@types/react-redux-toastr": "^7.4.1",
     "@types/react-select": "^3.0.0",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-grid-system": "^4.4.6",
+    "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "redux": "^4.0.4",
