--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-redux-toastr": "^7.4.1",
     "@types/react-select": "^3.0.0",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
